# open-australian-legal-embeddings-creator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/oale_creator/: __init__.py  chunking.py  cli.py  creator.py  helpers.py  metadata.py
